check_PROGRAMS = image
TESTS = $(check_PROGRAMS)

image_SOURCES = image.c
image_CFLAGS = $(GLOBAL_CFLAGS) $(SWFDEC_CFLAGS) $(CAIRO_CFLAGS)
image_LDFLAGS = $(SWFDEC_LIBS) $(CAIRO_LIBS)

EXTRA_DIST = \
	README \
	bw.jpg \
	clip-transparent.swf \
	clip-transparent.swf.png \
	clip-transparent.xml \
	color-transform-add80.swf \
	color-transform-add80.swf.png \
	color-transform-add80-alpha.swf \
	color-transform-add80-alpha.swf.png \
	duplicate-depth.c \
	duplicate-depth-5.swf \
	duplicate-depth-5.swf.png \
	duplicate-depth-6.swf \
	duplicate-depth-6.swf.png \
	duplicate-depth-7.swf \
	duplicate-depth-7.swf.png \
	drawing-zorder.as \
	drawing-zorder-5.swf \
	drawing-zorder-5.swf.png \
	drawing-zorder-6.swf \
	drawing-zorder-6.swf.org.png \
	drawing-zorder-6.swf.png \
	drawing-zorder-7.swf \
	drawing-zorder-7.swf.org.png \
	drawing-zorder-7.swf.png \
	drawing-zorder-8.swf \
	drawing-zorder-8.swf.org.png \
	drawing-zorder-8.swf.png \
	fillstyle-order.swf \
	fillstyle-order.swf.png \
	fillstyle-order.xml \
	image-jpeg-alpha.swf \
	image-jpeg-alpha.swf.png \
	image-lossless-alpha.swf \
	image-lossless-alpha.swf.png \
	morph-gradient.c \
	morph-gradient-4.swf \
	morph-gradient-4.swf.png \
	morph-gradient-5.swf \
	morph-gradient-5.swf.png \
	morph-gradient-6.swf \
	morph-gradient-6.swf.png \
	morph-gradient-7.swf \
	morph-gradient-7.swf.png \
	morph-gradient-8.swf \
	morph-gradient-8.swf.png \
	negative-color-transform.c \
	negative-color-transform.swf \
	negative-color-transform.swf.png \
	placeobject-ratio.swf \
	placeobject-ratio.swf.png \
	placeobject-ratio.xml \
	replace.c \
	replace-button-button-5.swf \
	replace-button-button-5.swf.png \
	replace-button-button-6.swf \
	replace-button-button-6.swf.png \
	replace-button-button-7.swf \
	replace-button-button-7.swf.png \
	replace-button-movie-5.swf \
	replace-button-movie-5.swf.png \
	replace-button-movie-6.swf \
	replace-button-movie-6.swf.png \
	replace-button-movie-7.swf \
	replace-button-movie-7.swf.png \
	replace-button-shape-5.swf \
	replace-button-shape-5.swf.png \
	replace-button-shape-6.swf \
	replace-button-shape-6.swf.png \
	replace-button-shape-7.swf \
	replace-button-shape-7.swf.png \
	replace-movie-button-5.swf \
	replace-movie-button-5.swf.png \
	replace-movie-button-6.swf \
	replace-movie-button-6.swf.png \
	replace-movie-button-7.swf \
	replace-movie-button-7.swf.png \
	replace-movie-movie-5.swf \
	replace-movie-movie-5.swf.png \
	replace-movie-movie-6.swf \
	replace-movie-movie-6.swf.png \
	replace-movie-movie-7.swf \
	replace-movie-movie-7.swf.png \
	replace-movie-shape-5.swf \
	replace-movie-shape-5.swf.png \
	replace-movie-shape-6.swf \
	replace-movie-shape-6.swf.png \
	replace-movie-shape-7.swf \
	replace-movie-shape-7.swf.png \
	replace-shape-button-5.swf \
	replace-shape-button-5.swf.png \
	replace-shape-button-6.swf \
	replace-shape-button-6.swf.png \
	replace-shape-button-7.swf \
	replace-shape-button-7.swf.png \
	replace-shape-movie-5.swf \
	replace-shape-movie-5.swf.png \
	replace-shape-movie-6.swf \
	replace-shape-movie-6.swf.png \
	replace-shape-movie-7.swf \
	replace-shape-movie-7.swf.png \
	replace-shape-shape-5.swf \
	replace-shape-shape-5.swf.png \
	replace-shape-shape-6.swf \
	replace-shape-shape-6.swf.png \
	replace-shape-shape-7.swf \
	replace-shape-shape-7.swf.png \
	text-field-autosize.as \
	text-field-autosize-6.swf \
	text-field-autosize-6.swf.png \
	text-field-autosize-7.swf \
	text-field-autosize-7.swf.png \
	text-field-autosize-8.swf \
	text-field-autosize-8.swf.png
	text-field-color-transform.as \
	text-field-color-transform-6.swf \
	text-field-color-transform-6.swf.png \
	text-field-color-transform-7.swf \
	text-field-color-transform-7.swf.png \
	text-field-color-transform-8.swf \
	text-field-color-transform-8.swf.png
	text-field-empty.as \
	text-field-empty-6.swf \
	text-field-empty-6.swf.png \
	text-field-empty-7.swf \
	text-field-empty-7.swf.png \
	text-field-empty-8.swf \
	text-field-empty-8.swf.png

