check-local: ../swfdec-test
	../swfdec-test --script $(srcdir)/default.sts $(srcdir)/*.swf

EXTRA_DIST = \
	README \
	bw.jpg \
	clip-change.c \
	clip-change-backward-5.swf \
	clip-change-backward-5.swf.png \
	clip-change-backward-6.swf \
	clip-change-backward-6.swf.png \
	clip-change-backward-7.swf \
	clip-change-backward-7.swf.png \
	clip-change-backward-8.swf \
	clip-change-backward-8.swf.png \
	clip-change-forward-5.swf \
	clip-change-forward-5.swf.png \
	clip-change-forward-6.swf \
	clip-change-forward-6.swf.png \
	clip-change-forward-7.swf \
	clip-change-forward-7.swf.png \
	clip-change-forward-8.swf \
	clip-change-forward-8.swf.png \
	clip-change-remove-5.swf \
	clip-change-remove-5.swf.png \
	clip-change-remove-6.swf \
	clip-change-remove-6.swf.png \
	clip-change-remove-7.swf \
	clip-change-remove-7.swf.png \
	clip-change-remove-8.swf \
	clip-change-remove-8.swf.png \
	clip-change-set-5.swf \
	clip-change-set-5.swf.png \
	clip-change-set-6.swf \
	clip-change-set-6.swf.png \
	clip-change-set-7.swf \
	clip-change-set-7.swf.png \
	clip-change-set-8.swf \
	clip-change-set-8.swf.png \
	clip-transparent.swf \
	clip-transparent.swf.png \
	clip-transparent.xml \
	color-transform-add80.swf \
	color-transform-add80.swf.png \
	color-transform-add80-alpha.swf \
	color-transform-add80-alpha.swf.png \
	default.stas \
	default.sts \
	definebits-palette-5.swf \
	definebits-palette-5.swf.org.png \
	definebits-palette-5.swf.png \
	definebits-palette-6.swf \
	definebits-palette-6.swf.org.png \
	definebits-palette-6.swf.png \
	definebits-palette-7.swf \
	definebits-palette-7.swf.png \
	definebits-palette-8.swf \
	definebits-palette-8.swf.png \
	definebits-palette-base64.c \
	definebits-palette.xml \
	duplicate-depth.c \
	duplicate-depth-5.swf \
	duplicate-depth-5.swf.png \
	duplicate-depth-6.swf \
	duplicate-depth-6.swf.png \
	duplicate-depth-7.swf \
	duplicate-depth-7.swf.png \
	drawing-zorder.as \
	drawing-zorder-5.swf \
	drawing-zorder-5.swf.png \
	drawing-zorder-6.swf \
	drawing-zorder-6.swf.org.png \
	drawing-zorder-6.swf.png \
	drawing-zorder-7.swf \
	drawing-zorder-7.swf.org.png \
	drawing-zorder-7.swf.png \
	drawing-zorder-8.swf \
	drawing-zorder-8.swf.org.png \
	drawing-zorder-8.swf.png \
	empty-gradient.swf \
	empty-gradient.swf.png \
	empty-gradient.xml \
	fillstyle-order.swf \
	fillstyle-order.swf.png \
	fillstyle-order.xml \
	focusrect-rotated-5.swf \
	focusrect-rotated-5.swf.png \
	focusrect-rotated-6.swf \
	focusrect-rotated-6.swf.org.png \
	focusrect-rotated-6.swf.png \
	focusrect-rotated-7.swf \
	focusrect-rotated-7.swf.org.png \
	focusrect-rotated-7.swf.png \
	focusrect-rotated-8.swf \
	focusrect-rotated-8.swf.org.png \
	focusrect-rotated-8.swf.png \
	focusrect-rotated.as \
	focusrect-simple-5.swf \
	focusrect-simple-5.swf.png \
	focusrect-simple-6.swf \
	focusrect-simple-6.swf.png \
	focusrect-simple-7.swf \
	focusrect-simple-7.swf.png \
	focusrect-simple-8.swf \
	focusrect-simple-8.swf.png \
	focusrect-simple.as \
	gradient-beginGradientFill.as \
	gradient-beginGradientFill-5.swf \
	gradient-beginGradientFill-5.swf.png \
	gradient-beginGradientFill-6.swf \
	gradient-beginGradientFill-6.swf.png \
	gradient-beginGradientFill-6.swf.org.png \
	gradient-beginGradientFill-7.swf \
	gradient-beginGradientFill-7.swf.png \
	gradient-beginGradientFill-7.swf.org.png \
	gradient-beginGradientFill-8.swf \
	gradient-beginGradientFill-8.swf.org.png \
	gradient-beginGradientFill-8.swf.png \
	gradient-end-duplication.swf \
	gradient-end-duplication.swf.png \
	gradient-end-duplication.swf.org.png \
	gradient-end-duplication.xml \
	gradient-ratios.swf \
	gradient-ratios.swf.png \
	gradient-ratios.swf.org.png \
	gradient-ratios.xml \
	image-jpeg-alpha.swf \
	image-jpeg-alpha.swf.png \
	image-lossless-alpha.swf \
	image-lossless-alpha.swf.png \
	load-jpeg.as \
	load-jpeg-5.swf \
	load-jpeg-5.swf.png \
	load-jpeg-6.swf \
	load-jpeg-6.swf.png \
	load-jpeg-7.swf \
	load-jpeg-7.swf.org.png \
	load-jpeg-7.swf.png \
	load-jpeg-8.swf \
	load-jpeg-8.swf.png \
	mask-affected-by-clip.c \
	mask-affected-by-clip-5.swf \
	mask-affected-by-clip-5.swf.png \
	mask-affected-by-clip-6.swf \
	mask-affected-by-clip-6.swf.png \
	mask-affected-by-clip-7.swf \
	mask-affected-by-clip-7.swf.png \
	mask-affected-by-clip-8.swf \
	mask-affected-by-clip-8.swf.png \
	mask-and-clip.c \
	mask-and-clip-0-8.swf \
	mask-and-clip-0-8.swf.png \
	mask-and-clip-10-8.swf \
	mask-and-clip-10-8.swf.png \
	mask-and-clip-11-8.swf \
	mask-and-clip-11-8.swf.png \
	mask-and-clip-12-8.swf \
	mask-and-clip-12-8.swf.png \
	mask-and-clip-13-8.swf \
	mask-and-clip-13-8.swf.png \
	mask-and-clip-14-8.swf \
	mask-and-clip-14-8.swf.png \
	mask-and-clip-15-8.swf \
	mask-and-clip-15-8.swf.png \
	mask-and-clip-1-8.swf \
	mask-and-clip-1-8.swf.png \
	mask-and-clip-2-8.swf \
	mask-and-clip-2-8.swf.png \
	mask-and-clip-3-8.swf \
	mask-and-clip-3-8.swf.png \
	mask-and-clip-4-8.swf \
	mask-and-clip-4-8.swf.png \
	mask-and-clip-5-8.swf \
	mask-and-clip-5-8.swf.png \
	mask-and-clip-6-8.swf \
	mask-and-clip-6-8.swf.png \
	mask-and-clip-7-8.swf \
	mask-and-clip-7-8.swf.png \
	mask-and-clip-8-8.swf \
	mask-and-clip-8-8.swf.png \
	mask-and-clip-9-8.swf \
	mask-and-clip-9-8.swf.png \
	mask-clip.c \
	mask-clip-mask-5.swf \
	mask-clip-mask-5.swf.png \
	mask-clip-mask-6.swf \
	mask-clip-mask-6.swf.png \
	mask-clip-mask-7.swf \
	mask-clip-mask-7.swf.png \
	mask-clip-mask-8.swf \
	mask-clip-mask-8.swf.png \
	mask-clip-maskee-5.swf \
	mask-clip-maskee-5.swf.png \
	mask-clip-maskee-6.swf \
	mask-clip-maskee-6.swf.png \
	mask-clip-maskee-7.swf \
	mask-clip-maskee-7.swf.png \
	mask-clip-maskee-8.swf \
	mask-clip-maskee-8.swf.png \
	mask-different-parent.as \
	mask-different-parent-5.swf \
	mask-different-parent-5.swf.png \
	mask-different-parent-6.swf \
	mask-different-parent-6.swf.png \
	mask-different-parent-7.swf \
	mask-different-parent-7.swf.png \
	mask-different-parent-8.swf \
	mask-different-parent-8.swf.png \
	mask-remove-clip.as \
	mask-remove-clip-5.swf \
	mask-remove-clip-5.swf.png \
	mask-remove-clip-6.swf \
	mask-remove-clip-6.swf.png \
	mask-remove-clip-7.swf \
	mask-remove-clip-7.swf.png \
	mask-remove-clip-8.swf \
	mask-remove-clip-8.swf.png \
	mask-terminates-clip.c \
	mask-terminates-clip-mask-5.swf \
	mask-terminates-clip-mask-5.swf.png \
	mask-terminates-clip-mask-6.swf \
	mask-terminates-clip-mask-6.swf.png \
	mask-terminates-clip-mask-7.swf \
	mask-terminates-clip-mask-7.swf.png \
	mask-terminates-clip-mask-8.swf \
	mask-terminates-clip-mask-8.swf.png \
	mask-terminates-clip-maskee-5.swf \
	mask-terminates-clip-maskee-5.swf.png \
	mask-terminates-clip-maskee-6.swf \
	mask-terminates-clip-maskee-6.swf.png \
	mask-terminates-clip-maskee-7.swf \
	mask-terminates-clip-maskee-7.swf.png \
	mask-terminates-clip-maskee-8.swf \
	mask-terminates-clip-maskee-8.swf.png \
	mask-textfield.as \
	mask-textfield-5.swf \
	mask-textfield-5.swf.png \
	mask-textfield-6.swf \
	mask-textfield-6.swf.png \
	mask-textfield-7.swf \
	mask-textfield-7.swf.png \
	mask-textfield-8.swf \
	mask-textfield-8.swf.png \
	mask-with-textfield.as \
	mask-with-textfield-5.swf \
	mask-with-textfield-5.swf.png \
	mask-with-textfield-6.swf \
	mask-with-textfield-6.swf.png \
	mask-with-textfield-7.swf \
	mask-with-textfield-7.swf.png \
	mask-with-textfield-8.swf \
	mask-with-textfield-8.swf.png \
	morph-end.c \
	morph-end-4.swf \
	morph-end-4.swf.png \
	morph-end-5.swf \
	morph-end-5.swf.png \
	morph-end-6.swf \
	morph-end-6.swf.png \
	morph-end-7.swf \
	morph-end-7.swf.png \
	morph-end-8.swf \
	morph-end-8.swf.png \
	morph-gradient.c \
	morph-gradient-4.swf \
	morph-gradient-4.swf.png \
	morph-gradient-5.swf \
	morph-gradient-5.swf.png \
	morph-gradient-6.swf \
	morph-gradient-6.swf.png \
	morph-gradient-7.swf \
	morph-gradient-7.swf.png \
	morph-gradient-8.swf \
	morph-gradient-8.swf.png \
	negative-color-transform.c \
	negative-color-transform.swf \
	negative-color-transform.swf.png \
	placeobject-ratio.swf \
	placeobject-ratio.swf.png \
	placeobject-ratio.xml \
	replace.c \
	replace-button-button-5.swf \
	replace-button-button-5.swf.png \
	replace-button-button-6.swf \
	replace-button-button-6.swf.png \
	replace-button-button-7.swf \
	replace-button-button-7.swf.png \
	replace-button-movie-5.swf \
	replace-button-movie-5.swf.png \
	replace-button-movie-6.swf \
	replace-button-movie-6.swf.png \
	replace-button-movie-7.swf \
	replace-button-movie-7.swf.png \
	replace-button-shape-5.swf \
	replace-button-shape-5.swf.png \
	replace-button-shape-6.swf \
	replace-button-shape-6.swf.png \
	replace-button-shape-7.swf \
	replace-button-shape-7.swf.png \
	replace-movie-button-5.swf \
	replace-movie-button-5.swf.png \
	replace-movie-button-6.swf \
	replace-movie-button-6.swf.png \
	replace-movie-button-7.swf \
	replace-movie-button-7.swf.png \
	replace-movie-movie-5.swf \
	replace-movie-movie-5.swf.png \
	replace-movie-movie-6.swf \
	replace-movie-movie-6.swf.png \
	replace-movie-movie-7.swf \
	replace-movie-movie-7.swf.png \
	replace-movie-shape-5.swf \
	replace-movie-shape-5.swf.png \
	replace-movie-shape-6.swf \
	replace-movie-shape-6.swf.png \
	replace-movie-shape-7.swf \
	replace-movie-shape-7.swf.png \
	replace-shape-button-5.swf \
	replace-shape-button-5.swf.png \
	replace-shape-button-6.swf \
	replace-shape-button-6.swf.png \
	replace-shape-button-7.swf \
	replace-shape-button-7.swf.png \
	replace-shape-movie-5.swf \
	replace-shape-movie-5.swf.png \
	replace-shape-movie-6.swf \
	replace-shape-movie-6.swf.png \
	replace-shape-movie-7.swf \
	replace-shape-movie-7.swf.png \
	replace-shape-shape-5.swf \
	replace-shape-shape-5.swf.png \
	replace-shape-shape-6.swf \
	replace-shape-shape-6.swf.png \
	replace-shape-shape-7.swf \
	replace-shape-shape-7.swf.png \
	swfdec.jpg \
	text-field-autosize.as \
	text-field-autosize-6.swf \
	text-field-autosize-6.swf.png \
	text-field-autosize-7.swf \
	text-field-autosize-7.swf.png \
	text-field-autosize-8.swf \
	text-field-autosize-8.swf.png \
	text-field-color-transform.as \
	text-field-color-transform-6.swf \
	text-field-color-transform-6.swf.png \
	text-field-color-transform-7.swf \
	text-field-color-transform-7.swf.png \
	text-field-color-transform-8.swf \
	text-field-color-transform-8.swf.png \
	text-field-empty.as \
	text-field-empty-6.swf \
	text-field-empty-6.swf.png \
	text-field-empty-7.swf \
	text-field-empty-7.swf.png \
	text-field-empty-8.swf \
	text-field-empty-8.swf.png

