check_PROGRAMS = trace

TESTS = $(check_PROGRAMS)

trace_SOURCES = trace.c

trace_CFLAGS = $(GLOBAL_CFLAGS) $(SWFDEC_CFLAGS) $(CAIRO_CFLAGS)
trace_LDFLAGS = $(SWFDEC_LIBS) $(CAIRO_LIBS)

EXTRA_DIST = \
	README \
	add2.as \
	add2-5.swf \
	add2-5.swf.trace \
	add2-6.swf \
	add2-6.swf.trace \
	add2-7.swf \
	add2-7.swf.trace \
	and-or-5.swf \
	and-or-5.swf.trace \
	and-or-6.swf \
	and-or-6.swf.trace \
	and-or-7.swf \
	and-or-7.swf.trace \
	array.swf \
	array.swf.trace \
	bitwise.as \
	bitwise-5.swf \
	bitwise-5.swf.trace \
	bitwise-6.swf \
	bitwise-6.swf.trace \
	bitwise-7.swf \
	bitwise-7.swf.trace \
	callfunction-stack.as \
	callfunction-stack.swf \
	callfunction-stack.swf.trace \
	callmethod-undefined-this-5.swf \
	callmethod-undefined-this-5.swf.trace \
	callmethod-undefined-this-6.swf \
	callmethod-undefined-this-6.swf.trace \
	callmethod-undefined-this-7.swf \
	callmethod-undefined-this-7.swf.trace \
	callmethod-undefined-this.as \
	case1-6.swf \
	case1-6.swf.trace \
	case1-7.swf \
	case1-7.swf.trace \
	children.swf \
	children.swf.trace \
	classes.swf \
	classes.swf.trace \
	color-getters.swf \
	color-getters.swf.trace \
	color-new.swf \
	color-new.swf.trace \
	color-setRGB.swf \
	color-setRGB.swf.trace \
	color-setTransform-alpha.swf \
	color-setTransform-alpha.swf.trace \
	color-setTransform-empty.swf \
	color-setTransform-empty.swf.trace \
	color-setTransform-negative.swf \
	color-setTransform-negative.swf.trace \
	color-setTransform-full.swf \
	color-setTransform-full.swf.trace \
	color1.swf \
	color1.swf.trace \
	comparisons-4.swf \
	comparisons-4.swf.trace \
	comparisons-5.swf \
	comparisons-5.swf.trace \
	comparisons-6.swf \
	comparisons-6.swf.trace \
	comparisons-7.swf \
	comparisons-7.swf.trace \
	constructor-prototype.swf \
	constructor-prototype.swf.trace \
	countdown.swf \
	countdown.swf.trace \
	currentframe.swf \
	currentframe.swf.trace \
	divide.as \
	divide-7.swf \
	divide-7.swf.trace \
	doaction-after-placeobject.swf.trace \
	doaction-after-placeobject.swf \
	doaction-before-placeobject.c \
	doaction-before-placeobject.swf \
	doaction-before-placeobject.swf.trace \
	double.swf \
	double.swf.trace \
	double.swf.trace.org \
	double-to-string.as
	double-to-string-5.swf \
	double-to-string-5.swf.trace \
	double-to-string-5.swf.trace.org \
	double-to-string-6.swf \
	double-to-string-6.swf.trace \
	double-to-string-6.swf.trace.org \
	double-to-string-7.swf \
	double-to-string-7.swf.trace \
	double-to-string-7.swf.trace.org \
	event-order.swf \
	empty-stack.as \
	empty-stack.swf \
	empty-stack.swf.trace \
	equality.as \
	equality-5.swf \
	equality-5.swf.trace \
	equality-6.swf \
	equality-6.swf.trace \
	equality-7.swf \
	equality-7.swf.trace \
	event-order.swf \
	event-order.swf.trace \
	extends-simple.swf \
	extends-simple.swf.trace \
	extends-super.swf \
	extends-super.swf.trace \
	fromcharcode.as \
	fromcharcode-5.swf \
	fromcharcode-5.swf.trace \
	fromcharcode-6.swf \
	fromcharcode-6.swf.trace \
	fromcharcode-7.swf \
	fromcharcode-7.swf.trace \
	function1.swf \
	function1.swf.trace \
	function2.swf \
	function2.swf.trace \
	function-prototype-chain.swf \
	function-prototype-chain.swf.trace \
	function-scope.as \
	function-scope-5.swf \
	function-scope-5.swf.trace \
	function-scope-6.swf \
	function-scope-6.swf.trace \
	function-scope-7.swf \
	function-scope-7.swf.trace \
	function-tostring.as \
	function-tostring-5.swf \
	function-tostring-5.swf.trace \
	function-tostring-6.swf \
	function-tostring-6.swf.trace \
	function-tostring-7.swf \
	function-tostring-7.swf.trace \
	function-undefined.swf \
	function-undefined.swf.trace \
	goto1.swf \
	goto1.swf.trace \
	goto2.swf \
	goto2.swf.trace \
	goto3.swf \
	goto3.swf.trace \
	goto4.swf \
	goto4.swf.trace \
	goto5.swf \
	goto5.swf.trace \
	gotoframe.swf \
	gotoframe.swf.trace \
	height1.swf \
	height1.swf.trace \
	height2.swf \
	height2.swf.trace \
	height3.swf \
	height3.swf.trace \
	height4.swf \
	height4.swf.trace \
	isnan.as \
	isnan-5.swf \
	isnan-5.swf.trace \
	isnan-6.swf \
	isnan-6.swf.trace \
	isnan-7.swf \
	if.as \
	if-5.swf \
	if-5.swf.trace \
	if-6.swf \
	if-6.swf.trace \
	if-7.swf \
	if-7.swf.trace \
	isnan-7.swf.trace \
	lifetime1.swf \
	lifetime1.swf.trace \
	load-4.swf \
	load-4.swf.trace \
	load-5.swf \
	load-5.swf.trace \
	local.swf \
	local.swf.trace \
	name.swf \
	name.swf.trace \
	name2.swf \
	name2.swf.trace \
	names.swf \
	names.swf.trace \
	netconnection.swf \
	netconnection.swf.trace \
	netstream-onstatus.c \
	netstream-onstatus.swf \
	netstream-onstatus.swf.trace \
	netstream-onstatus-notfound.as \
	netstream-onstatus-notfound.swf \
	netstream-onstatus-notfound.swf.trace \
	number.swf \
	number.swf.trace \
	object-math-5.swf \
	object-math-5.swf.trace \
	object-math-6.swf \
	object-math-6.swf.trace \
	object-math-7.swf \
	object-math-7.swf.trace \
	onload-childparent.c \
	onload-childparent.swf \
	onload-childparent.swf.trace \
	order.swf \
	order.swf.trace \
	parent-root.swf \
	parent-root.swf.trace \
	preload.swf \
	preload.swf.trace \
	prototypes.swf \
	prototypes.swf.trace \
	registerclass-previous.c \
	registerclass-previous.swf \
	registerclass-previous.swf.trace \
	registerclass-properties.swf \
	registerclass-properties.swf.trace \
	rotation-5.swf \
	rotation-5.swf.trace \
	scope.swf \
	scope.swf.trace \
	scope2.swf \
	scope2.swf.trace \
	set-overwrite-global-5.swf \
	set-overwrite-global-6.swf \
	set-overwrite-global-7.swf \
	set-overwrite-global.as \
	set-overwrite-global-5.swf.trace \
	set-overwrite-global-6.swf.trace \
	set-overwrite-global-7.swf.trace \
	setinterval.swf \
	setinterval.swf.trace \
	setinterval2.swf \
	setinterval2.swf.trace \
	setinterval-arguments.as \
	setinterval-arguments.swf \
	setinterval-arguments.swf.trace \
	setinterval-clear.swf \
	setinterval-clear.swf.trace \
	setvariable.swf \
	setvariable.swf.trace \
	string-construct.as \
	string-construct-5.swf \
	string-construct-5.swf.trace \
	string-construct-6.swf \
	string-construct-6.swf.trace \
	string-construct-7.swf \
	string-construct-7.swf.trace \
	string-convert.as \
	string-convert-5.swf \
	string-convert-5.swf.trace \
	string-convert-6.swf \
	string-convert-6.swf.trace \
	string-convert-7.swf \
	string-convert-7.swf.trace \
	substring.as \
	substr.as \
	substr-5.swf \
	substr-5.swf.trace \
	substr-6.swf \
	substr-6.swf.trace \
	substr-7.swf \
	substr-7.swf.trace \
	substring-5.swf \
	substring-5.swf.trace \
	substring-6.swf \
	substring-6.swf.trace \
	substring-7.swf \
	substring-7.swf.trace \
	tointeger-numbers.as \
	tointeger-numbers-5.swf \
	tointeger-numbers-5.swf.trace \
	tointeger-numbers-6.swf \
	tointeger-numbers-6.swf.trace \
	tointeger-numbers-7.swf \
	tointeger-numbers-7.swf.trace \
	tointeger-various.as \
	tointeger-various-5.swf \
	tointeger-various-5.swf.trace \
	tointeger-various-6.swf \
	tointeger-various-6.swf.trace \
	tointeger-various-7.swf \
	tointeger-various-7.swf.trace \
	transform.swf \
	transform.swf.trace \
	transform2.swf \
	transform2.swf.trace \
	transform2.swf.trace.org \
	undefined-tostring.swf \
	undefined-tostring.swf.trace \
	undefined1.swf \
	undefined1.swf.trace \
	undefined2-6.swf \
	undefined2-6.swf.trace \
	undefined2-7.swf \
	undefined2-7.swf.trace \
	video.flv \
	xscale.swf \
	xscale.swf.trace

CLEANFILES = tmp
