check_PROGRAMS = trace

TESTS = $(check_PROGRAMS)

trace_SOURCES = \
	swfdec_interaction.c \
	trace.c

noinst_HEADERS = \
	swfdec_interaction.h

trace_CFLAGS = $(GLOBAL_CFLAGS) $(SWFDEC_CFLAGS) $(CAIRO_CFLAGS) $(GTHREAD_CFLAGS)
trace_LDFLAGS = $(SWFDEC_LIBS) $(CAIRO_LIBS) $(GTHREAD_LIBS)

EXTRA_DIST = \
	README \
	abort-really-aborts.as \
	abort-really-aborts-5.swf \
	abort-really-aborts-5.swf.trace \
	abort-really-aborts-6.swf \
	abort-really-aborts-6.swf.trace \
	abort-really-aborts-7.swf \
	abort-really-aborts-7.swf.trace \
	add2.as \
	add2-5.swf \
	add2-5.swf.trace \
	add2-6.swf \
	add2-6.swf.trace \
	add2-7.swf \
	add2-7.swf.trace \
	and-or-5.swf \
	and-or-5.swf.trace \
	and-or-6.swf \
	and-or-6.swf.trace \
	and-or-7.swf \
	and-or-7.swf.trace \
	array.swf \
	array.swf.trace \
	array-new.as \
	array-new-5.swf \
	array-new-5.swf.trace \
	array-new-6.swf \
	array-new-6.swf.trace \
	array-new-7.swf \
	array-new-7.swf.trace \
	array-new-override.as \
	array-new-override-5.swf \
	array-new-override-5.swf.trace \
	array-new-override-6.swf \
	array-new-override-6.swf.trace \
	array-new-override-7.swf \
	array-new-override-7.swf.trace \
	bitwise.as \
	bitwise-5.swf \
	bitwise-5.swf.trace \
	bitwise-6.swf \
	bitwise-6.swf.trace \
	bitwise-7.swf \
	bitwise-7.swf.trace \
	call-arguments.as \
	call-arguments-5.swf \
	call-arguments-5.swf.trace \
	call-arguments-6.swf \
	call-arguments-6.swf.trace \
	call-arguments-7.swf \
	call-arguments-7.swf.trace \
	call-arguments-8.swf \
	call-arguments-8.swf.trace \
	callfunction-stack.as \
	callfunction-stack.swf \
	callfunction-stack.swf.trace \
	callmethod-undefined-this-5.swf \
	callmethod-undefined-this-5.swf.trace \
	callmethod-undefined-this-6.swf \
	callmethod-undefined-this-6.swf.trace \
	callmethod-undefined-this-7.swf \
	callmethod-undefined-this-7.swf.trace \
	callmethod-undefined-this.as \
	case1-6.swf \
	case1-6.swf.trace \
	case1-7.swf \
	case1-7.swf.trace \
	charat.as \
	charat-5.swf \
	charat-5.swf.trace \
	charat-6.swf \
	charat-6.swf.trace \
	charat-7.swf \
	charat-7.swf.trace \
	chartoascii.as \
	chartoascii-4.swf \
	chartoascii-4.swf.trace \
	chartoascii-5.swf \
	chartoascii-5.swf.trace \
	chartoascii-6.swf \
	chartoascii-6.swf.trace \
	chartoascii-7.swf \
	chartoascii-7.swf.trace \
	children.swf \
	children.swf.trace \
	chr.as \
	chr-5.swf \
	chr-5.swf.trace \
	chr-6.swf \
	chr-6.swf.trace \
	chr-7.swf \
	chr-7.swf.trace \
	classes.swf \
	classes.swf.trace \
	color-getters.swf \
	color-getters.swf.trace \
	color-new.swf \
	color-new.swf.trace \
	color-setRGB.swf \
	color-setRGB.swf.trace \
	color-setTransform-alpha.swf \
	color-setTransform-alpha.swf.trace \
	color-setTransform-empty.swf \
	color-setTransform-empty.swf.trace \
	color-setTransform-negative.swf \
	color-setTransform-negative.swf.trace \
	color-setTransform-full.swf \
	color-setTransform-full.swf.trace \
	color1.swf \
	color1.swf.trace \
	comparisons-4.swf \
	comparisons-4.swf.trace \
	comparisons-5.swf \
	comparisons-5.swf.trace \
	comparisons-6.swf \
	comparisons-6.swf.trace \
	comparisons-7.swf \
	comparisons-7.swf.trace \
	constructor-prototype.swf \
	constructor-prototype.swf.trace \
	countdown.swf \
	countdown.swf.trace \
	currentframe.swf \
	currentframe.swf.trace \
	definelocal-function-target.as \
	definelocal-function-target-5.swf \
	definelocal-function-target-5.swf.trace \
	definelocal-function-target-6.swf \
	definelocal-function-target-6.swf.trace \
	definelocal-function-target-7.swf \
	definelocal-function-target-7.swf.trace \
	definelocal-target.as \
	definelocal-target-5.swf \
	definelocal-target-5.swf.trace \
	definelocal-target-6.swf \
	definelocal-target-6.swf.trace \
	definelocal-target-7.swf \
	definelocal-target-7.swf.trace \
	delete-object.as \
	delete-object-5.swf \
	delete-object-5.swf.trace \
	delete-object-6.swf \
	delete-object-6.swf.trace \
	delete-object-7.swf \
	delete-object-7.swf.trace \
	delete-prototypes.as \
	delete-prototypes-5.swf \
	delete-prototypes-5.swf.trace \
	delete-prototypes-6.swf \
	delete-prototypes-6.swf.trace \
	delete-prototypes-7.swf \
	delete-prototypes-7.swf.trace \
	divide.as \
	divide-7.swf \
	divide-7.swf.trace \
	doaction-after-placeobject.swf.trace \
	doaction-after-placeobject.swf \
	doaction-before-placeobject.c \
	doaction-before-placeobject.swf \
	doaction-before-placeobject.swf.trace \
	double.swf \
	double.swf.trace \
	double.swf.trace.org \
	double-to-string.as
	double-to-string-5.swf \
	double-to-string-5.swf.trace \
	double-to-string-5.swf.trace.org \
	double-to-string-6.swf \
	double-to-string-6.swf.trace \
	double-to-string-6.swf.trace.org \
	double-to-string-7.swf \
	double-to-string-7.swf.trace \
	double-to-string-7.swf.trace.org \
	duplicate-names.as \
	duplicate-names-5.swf \
	duplicate-names-5.swf.trace \
	duplicate-names-6.swf \
	duplicate-names-6.swf.trace \
	duplicate-names-7.swf \
	duplicate-names-7.swf.trace \
	event-order.swf \
	empty-stack.as \
	empty-stack.swf \
	empty-stack.swf.trace \
	equality.as \
	equality-5.swf \
	equality-5.swf.trace \
	equality-6.swf \
	equality-6.swf.trace \
	equality-7.swf \
	equality-7.swf.trace \
	escape.as \
	escape-5.swf \
	escape-5.swf.trace \
	escape-6.swf \
	escape-6.swf.trace \
	escape-7.swf \
	escape-7.swf.trace \
	event-order.swf \
	event-order.swf.trace \
	export-case.c \
	export-case-5.swf \
	export-case-5.swf.trace \
	export-case-6.swf \
	export-case-6.swf.trace \
	export-case-7.swf \
	export-case-7.swf.trace \
	extends-simple.swf \
	extends-simple.swf.trace \
	extends-super.swf \
	extends-super.swf.trace \
	fromcharcode.as \
	fromcharcode-5.swf \
	fromcharcode-5.swf.trace \
	fromcharcode-6.swf \
	fromcharcode-6.swf.trace \
	fromcharcode-7.swf \
	fromcharcode-7.swf.trace \
	function1.swf \
	function1.swf.trace \
	function2.swf \
	function2.swf.trace \
	function-prototype-chain.swf \
	function-prototype-chain.swf.trace \
	function-scope.as \
	function-scope-5.swf \
	function-scope-5.swf.trace \
	function-scope-6.swf \
	function-scope-6.swf.trace \
	function-scope-7.swf \
	function-scope-7.swf.trace \
	function-tostring.as \
	function-tostring-5.swf \
	function-tostring-5.swf.trace \
	function-tostring-6.swf \
	function-tostring-6.swf.trace \
	function-tostring-7.swf \
	function-tostring-7.swf.trace \
	function-undefined.swf \
	function-undefined.swf.trace \
	goto1.swf \
	goto1.swf.trace \
	goto2.swf \
	goto2.swf.trace \
	goto3.swf \
	goto3.swf.trace \
	goto4.swf \
	goto4.swf.trace \
	goto5.swf \
	goto5.swf.trace \
	gotoframe.swf \
	gotoframe.swf.trace \
	height1.swf \
	height1.swf.trace \
	height2.swf \
	height2.swf.trace \
	height3.swf \
	height3.swf.trace \
	height4.swf \
	height4.swf.trace \
	if.as \
	if-5.swf \
	if-5.swf.trace \
	if-6.swf \
	if-6.swf.trace \
	if-7.swf \
	if-7.swf.trace \
	initobject-stack.as \
	initobject-stack-5.swf \
	initobject-stack-5.swf.trace \
	initobject-stack-6.swf \
	initobject-stack-6.swf.trace \
	initobject-stack-7.swf \
	initobject-stack-7.swf.trace \
	instance-name-loaded.c \
	instance-name-loaded-5.swf \
	instance-name-loaded-5.swf.trace \
	instance-name-loaded-6.swf \
	instance-name-loaded-6.swf.trace \
	instance-name-loaded-7.swf \
	instance-name-loaded-7.swf.trace \
	isnan.as \
	isnan-5.swf \
	isnan-5.swf.trace \
	isnan-6.swf \
	isnan-6.swf.trace \
	isnan-7.swf \
	isnan-7.swf.trace \
	jump-into-with.as \
	jump-into-with.swf \
	jump-into-with.swf.trace \
	jump-out-and-back-into-with.as \
	jump-out-and-back-into-with.swf \
	jump-out-and-back-into-with.swf.trace \
	jump-out-and-back-into-with-2.as \
	jump-out-and-back-into-with-2.swf \
	jump-out-and-back-into-with-2.swf.trace \
	jump-out-and-back-into-with-3.as \
	jump-out-and-back-into-with-3.swf \
	jump-out-and-back-into-with-3.swf.trace \
	jump-out-and-back-into-with-4.as \
	jump-out-and-back-into-with-4.swf \
	jump-out-and-back-into-with-4.swf.trace \
	jump-out-and-back-into-with-5.as \
	jump-out-and-back-into-with-5.swf \
	jump-out-and-back-into-with-5.swf.trace \
	jump-out-of-with.as \
	jump-out-of-with.swf \
	jump-out-of-with.swf.trace \
	level-property.as \
	level-property-5.swf \
	level-property-5.swf.trace \
	level-property-6.swf \
	level-property-6.swf.trace \
	level-property-7.swf \
	level-property-7.swf.trace \
	lifetime1.swf \
	lifetime1.swf.trace \
	load-4.swf \
	load-4.swf.trace \
	load-5.swf \
	load-5.swf.trace \
	local.swf \
	local.swf.trace \
	math-actions.as \
	math-actions-5.swf \
	math-actions-5.swf.trace \
	math-actions-5.swf.trace.org \
	math-actions-6.swf \
	math-actions-6.swf.trace \
	math-actions-6.swf.trace.org \
	math-actions-7.swf \
	math-actions-7.swf.trace \
	math-actions-7.swf.trace.org \
	math-constants.as \
	math-constants-5.swf \
	math-constants-5.swf.trace \
	math-constants-6.swf \
	math-constants-6.swf.trace \
	math-constants-7.swf \
	math-constants-7.swf.trace \
	mouse-scaled.as \
	mouse-scaled-5.swf \
	mouse-scaled-5.swf.act \
	mouse-scaled-5.swf.trace \
	mouse-scaled-6.swf \
	mouse-scaled-6.swf.act \
	mouse-scaled-6.swf.trace \
	mouse-scaled-6.swf.trace.org \
	mouse-scaled-7.swf \
	mouse-scaled-7.swf.act \
	mouse-scaled-7.swf.trace \
	mouse-scaled-7.swf.trace.org \
	mouse-show-hide.as \
	mouse-show-hide-5.swf \
	mouse-show-hide-5.swf.trace \
	mouse-show-hide-6.swf \
	mouse-show-hide-6.swf.trace \
	mouse-show-hide-7.swf \
	mouse-show-hide-7.swf.trace \
	name.swf \
	name.swf.trace \
	name2.swf \
	name2.swf.trace \
	names.swf \
	names.swf.trace \
	netconnection.swf \
	netconnection.swf.trace \
	netstream-onstatus.c \
	netstream-onstatus.swf \
	netstream-onstatus.swf.trace \
	netstream-onstatus-notfound.as \
	netstream-onstatus-notfound.swf \
	netstream-onstatus-notfound.swf.trace \
	number.swf \
	number.swf.trace \
	object-math-5.swf \
	object-math-5.swf.trace \
	object-math-6.swf \
	object-math-6.swf.trace \
	object-math-7.swf \
	object-math-7.swf.trace \
	onload-childparent.c \
	onload-childparent.swf \
	onload-childparent.swf.trace \
	order.swf \
	order.swf.trace \
	parent-root.swf \
	parent-root.swf.trace \
	place-object.c \
	place-object-5.swf \
	place-object-5.swf.trace \
	place-object-6.swf \
	place-object-6.swf.trace \
	place-object-7.swf \
	place-object-7.swf.trace \
	place-object-button-5.swf \
	place-object-button-5.swf.trace \
	place-object-button-6.swf \
	place-object-button-6.swf.trace \
	place-object-button-7.swf \
	place-object-button-7.swf.trace \
	place-object-button-move-5.swf \
	place-object-button-move-5.swf.trace \
	place-object-button-move-6.swf \
	place-object-button-move-6.swf.trace \
	place-object-button-move-7.swf \
	place-object-button-move-7.swf.trace \
	place-object-button-move-name-5.swf \
	place-object-button-move-name-5.swf.trace \
	place-object-button-move-name-6.swf \
	place-object-button-move-name-6.swf.trace \
	place-object-button-move-name-7.swf \
	place-object-button-move-name-7.swf.trace \
	place-object-button-name-5.swf \
	place-object-button-name-5.swf.trace \
	place-object-button-name-6.swf \
	place-object-button-name-6.swf.trace \
	place-object-button-name-7.swf \
	place-object-button-name-7.swf.trace \
	place-object-char-5.swf \
	place-object-char-5.swf.trace \
	place-object-char-6.swf \
	place-object-char-6.swf.trace \
	place-object-char-7.swf \
	place-object-char-7.swf.trace \
	place-object-char-move-5.swf \
	place-object-char-move-5.swf.trace \
	place-object-char-move-6.swf \
	place-object-char-move-6.swf.trace \
	place-object-char-move-7.swf \
	place-object-char-move-7.swf.trace \
	place-object-char-move-name-5.swf \
	place-object-char-move-name-5.swf.trace \
	place-object-char-move-name-6.swf \
	place-object-char-move-name-6.swf.trace \
	place-object-char-move-name-7.swf \
	place-object-char-move-name-7.swf.trace \
	place-object-char-name-5.swf \
	place-object-char-name-5.swf.trace \
	place-object-char-name-6.swf \
	place-object-char-name-6.swf.trace \
	place-object-char-name-7.swf \
	place-object-char-name-7.swf.trace \
	place-object-move-5.swf \
	place-object-move-5.swf.trace \
	place-object-move-6.swf \
	place-object-move-6.swf.trace \
	place-object-move-7.swf \
	place-object-move-7.swf.trace \
	place-object-move-name-5.swf \
	place-object-move-name-5.swf.trace \
	place-object-move-name-6.swf \
	place-object-move-name-6.swf.trace \
	place-object-move-name-7.swf \
	place-object-move-name-7.swf.trace \
	place-object-movie-5.swf \
	place-object-movie-5.swf.trace \
	place-object-movie-6.swf \
	place-object-movie-6.swf.trace \
	place-object-movie-7.swf \
	place-object-movie-7.swf.trace \
	place-object-movie-move-5.swf \
	place-object-movie-move-5.swf.trace \
	place-object-movie-move-6.swf \
	place-object-movie-move-6.swf.trace \
	place-object-movie-move-7.swf \
	place-object-movie-move-7.swf.trace \
	place-object-movie-move-name-5.swf \
	place-object-movie-move-name-5.swf.trace \
	place-object-movie-move-name-6.swf \
	place-object-movie-move-name-6.swf.trace \
	place-object-movie-move-name-7.swf \
	place-object-movie-move-name-7.swf.trace \
	place-object-movie-name-5.swf \
	place-object-movie-name-5.swf.trace \
	place-object-movie-name-6.swf \
	place-object-movie-name-6.swf.trace \
	place-object-movie-name-7.swf \
	place-object-movie-name-7.swf.trace \
	place-object-name-5.swf \
	place-object-name-5.swf.trace \
	place-object-name-6.swf \
	place-object-name-6.swf.trace \
	place-object-name-7.swf \
	place-object-name-7.swf.trace \
	place-object-remove-5.swf \
	place-object-remove-5.swf.trace \
	place-object-remove-6.swf \
	place-object-remove-6.swf.trace \
	place-object-remove-7.swf \
	place-object-remove-7.swf.trace \
	place-object-remove-button-5.swf \
	place-object-remove-button-5.swf.trace \
	place-object-remove-button-6.swf \
	place-object-remove-button-6.swf.trace \
	place-object-remove-button-7.swf \
	place-object-remove-button-7.swf.trace \
	place-object-remove-button-move-5.swf \
	place-object-remove-button-move-5.swf.trace \
	place-object-remove-button-move-6.swf \
	place-object-remove-button-move-6.swf.trace \
	place-object-remove-button-move-7.swf \
	place-object-remove-button-move-7.swf.trace \
	place-object-remove-button-move-name-5.swf \
	place-object-remove-button-move-name-5.swf.trace \
	place-object-remove-button-move-name-6.swf \
	place-object-remove-button-move-name-6.swf.trace \
	place-object-remove-button-move-name-7.swf \
	place-object-remove-button-move-name-7.swf.trace \
	place-object-remove-button-name-5.swf \
	place-object-remove-button-name-5.swf.trace \
	place-object-remove-button-name-6.swf \
	place-object-remove-button-name-6.swf.trace \
	place-object-remove-button-name-7.swf \
	place-object-remove-button-name-7.swf.trace \
	place-object-remove-char-5.swf \
	place-object-remove-char-5.swf.trace \
	place-object-remove-char-6.swf \
	place-object-remove-char-6.swf.trace \
	place-object-remove-char-7.swf \
	place-object-remove-char-7.swf.trace \
	place-object-remove-char-move-5.swf \
	place-object-remove-char-move-5.swf.trace \
	place-object-remove-char-move-6.swf \
	place-object-remove-char-move-6.swf.trace \
	place-object-remove-char-move-7.swf \
	place-object-remove-char-move-7.swf.trace \
	place-object-remove-char-move-name-5.swf \
	place-object-remove-char-move-name-5.swf.trace \
	place-object-remove-char-move-name-6.swf \
	place-object-remove-char-move-name-6.swf.trace \
	place-object-remove-char-move-name-7.swf \
	place-object-remove-char-move-name-7.swf.trace \
	place-object-remove-char-name-5.swf \
	place-object-remove-char-name-5.swf.trace \
	place-object-remove-char-name-6.swf \
	place-object-remove-char-name-6.swf.trace \
	place-object-remove-char-name-7.swf \
	place-object-remove-char-name-7.swf.trace \
	place-object-remove-move-5.swf \
	place-object-remove-move-5.swf.trace \
	place-object-remove-move-6.swf \
	place-object-remove-move-6.swf.trace \
	place-object-remove-move-7.swf \
	place-object-remove-move-7.swf.trace \
	place-object-remove-move-name-5.swf \
	place-object-remove-move-name-5.swf.trace \
	place-object-remove-move-name-6.swf \
	place-object-remove-move-name-6.swf.trace \
	place-object-remove-move-name-7.swf \
	place-object-remove-move-name-7.swf.trace \
	place-object-remove-movie-5.swf \
	place-object-remove-movie-5.swf.trace \
	place-object-remove-movie-6.swf \
	place-object-remove-movie-6.swf.trace \
	place-object-remove-movie-7.swf \
	place-object-remove-movie-7.swf.trace \
	place-object-remove-movie-move-5.swf \
	place-object-remove-movie-move-5.swf.trace \
	place-object-remove-movie-move-6.swf \
	place-object-remove-movie-move-6.swf.trace \
	place-object-remove-movie-move-7.swf \
	place-object-remove-movie-move-7.swf.trace \
	place-object-remove-movie-move-name-5.swf \
	place-object-remove-movie-move-name-5.swf.trace \
	place-object-remove-movie-move-name-6.swf \
	place-object-remove-movie-move-name-6.swf.trace \
	place-object-remove-movie-move-name-7.swf \
	place-object-remove-movie-move-name-7.swf.trace \
	place-object-remove-movie-name-5.swf \
	place-object-remove-movie-name-5.swf.trace \
	place-object-remove-movie-name-6.swf \
	place-object-remove-movie-name-6.swf.trace \
	place-object-remove-movie-name-7.swf \
	place-object-remove-movie-name-7.swf.trace \
	place-object-remove-name-5.swf \
	place-object-remove-name-5.swf.trace \
	place-object-remove-name-6.swf \
	place-object-remove-name-6.swf.trace \
	place-object-remove-name-7.swf \
	place-object-remove-name-7.swf.trace \
	preload.swf \
	preload.swf.trace \
	prototypes.swf \
	prototypes.swf.trace \
	registerclass-previous.c \
	registerclass-previous.swf \
	registerclass-previous.swf.trace \
	registerclass-properties.swf \
	registerclass-properties.swf.trace \
	relational.as \
	relational-5.swf \
	relational-5.swf.trace \
	relational-6.swf \
	relational-6.swf.trace \
	relational-7.swf \
	relational-7.swf.trace \
	removesprite-depths.as \
	removesprite-depths-5.swf \
	removesprite-depths-5.swf.trace \
	removesprite-depths-6.swf \
	removesprite-depths-6.swf.trace \
	removesprite-depths-7.swf \
	removesprite-depths-7.swf.trace \
	rotation-5.swf \
	rotation-5.swf.trace \
	round-direction.as \
	round-direction-5.swf \
	round-direction-5.swf.trace \
	round-direction-6.swf \
	round-direction-6.swf.trace \
	round-direction-7.swf \
	round-direction-7.swf.trace \
	round-direction-8.swf \
	round-direction-8.swf.trace \
	scope.swf \
	scope.swf.trace \
	scope2.swf \
	scope2.swf.trace \
	set-overwrite-global-5.swf \
	set-overwrite-global-6.swf \
	set-overwrite-global-7.swf \
	set-overwrite-global.as \
	set-overwrite-global-5.swf.trace \
	set-overwrite-global-6.swf.trace \
	set-overwrite-global-7.swf.trace \
	setinterval.swf \
	setinterval.swf.trace \
	setinterval2.swf \
	setinterval2.swf.trace \
	setinterval-arguments.as \
	setinterval-arguments.swf \
	setinterval-arguments.swf.trace \
	setinterval-clear.swf \
	setinterval-clear.swf.trace \
	setinterval-this.as \
	setinterval-this-5.swf \
	setinterval-this-5.swf.trace \
	setinterval-this-6.swf \
	setinterval-this-6.swf.trace \
	setinterval-this-7.swf \
	setinterval-this-7.swf.trace \
	setvariable.swf \
	setvariable.swf.trace \
	setvariable-callback.as \
	setvariable-callback-6.swf \
	setvariable-callback-6.swf.trace \
	setvariable-callback-7.swf \
	setvariable-callback-7.swf.trace \
	setvariable-function.as \
	setvariable-function-5.swf \
	setvariable-function-5.swf.trace \
	setvariable-function-6.swf \
	setvariable-function-6.swf.trace \
	setvariable-function-7.swf \
	setvariable-function-7.swf.trace \
	setvariable-function-target.as \
	setvariable-function-target-5.swf \
	setvariable-function-target-5.swf.trace \
	setvariable-function-target-6.swf \
	setvariable-function-target-6.swf.trace \
	setvariable-function-target-7.swf \
	setvariable-function-target-7.swf.trace \
	shift.as \
	shift-5.swf \
	shift-5.swf.trace \
	shift-6.swf \
	shift-6.swf.trace \
	shift-7.swf \
	shift-7.swf.trace \
	stack-overflow.as \
	stack-overflow-5.swf \
	stack-overflow-5.swf.trace \
	stack-overflow-6.swf \
	stack-overflow-6.swf.trace \
	stack-overflow-7.swf \
	stack-overflow-7.swf.trace \
	string-construct.as \
	string-construct-5.swf \
	string-construct-5.swf.trace \
	string-construct-6.swf \
	string-construct-6.swf.trace \
	string-construct-7.swf \
	string-construct-7.swf.trace \
	string-convert.as \
	string-convert-5.swf \
	string-convert-5.swf.trace \
	string-convert-6.swf \
	string-convert-6.swf.trace \
	string-convert-7.swf \
	string-convert-7.swf.trace \
	string-indexof.as \
	string-indexof-5.swf \
	string-indexof-5.swf.trace \
	string-indexof-6.swf \
	string-indexof-6.swf.trace \
	string-indexof-7.swf \
	string-indexof-7.swf.trace \
	string-split.as \
	string-split-5.swf \
	string-split-5.swf.trace \
	string-split-6.swf \
	string-split-6.swf.trace \
	string-split-7.swf \
	string-split-7.swf.trace \
	string-split-empty.as \
	string-split-empty-5.swf \
	string-split-empty-5.swf.trace \
	string-split-empty-6.swf \
	string-split-empty-6.swf.trace \
	string-split-empty-7.swf \
	string-split-empty-7.swf.trace \
	stringlength.as \
	stringlength-5.swf \
	stringlength-5.swf.trace \
	stringlength-6.swf \
	stringlength-6.swf.trace \
	stringlength-7.swf \
	stringlength-7.swf.trace \
	substring.as \
	substr.as \
	substr-5.swf \
	substr-5.swf.trace \
	substr-6.swf \
	substr-6.swf.trace \
	substr-7.swf \
	substr-7.swf.trace \
	substring-5.swf \
	substring-5.swf.trace \
	substring-6.swf \
	substring-6.swf.trace \
	substring-7.swf \
	substring-7.swf.trace \
	super-calls.as \
	super-calls-6.swf \
	super-calls-6.swf.trace \
	super-calls-7.swf \
	super-calls-7.swf.trace \
	super-calls-8.swf \
	super-calls-8.swf.trace \
	targetpath.as \
	targetpath-5.swf \
	targetpath-5.swf.trace \
	targetpath-6.swf \
	targetpath-6.swf.trace \
	targetpath-7.swf \
	targetpath-7.swf.trace \
	tointeger-numbers.as \
	tointeger-numbers-5.swf \
	tointeger-numbers-5.swf.trace \
	tointeger-numbers-6.swf \
	tointeger-numbers-6.swf.trace \
	tointeger-numbers-7.swf \
	tointeger-numbers-7.swf.trace \
	tointeger-various.as \
	tointeger-various-5.swf \
	tointeger-various-5.swf.trace \
	tointeger-various-6.swf \
	tointeger-various-6.swf.trace \
	tointeger-various-7.swf \
	tointeger-various-7.swf.trace \
	transform.swf \
	transform.swf.trace \
	transform2.swf \
	transform2.swf.trace \
	transform2.swf.trace.org \
	undefined-tostring.swf \
	undefined-tostring.swf.trace \
	undefined1.swf \
	undefined1.swf.trace \
	undefined2-6.swf \
	undefined2-6.swf.trace \
	undefined2-7.swf \
	undefined2-7.swf.trace \
	unescape.as \
	unescape-5.swf \
	unescape-5.swf.trace \
	unescape-5.swf.trace.org \
	unescape-6.swf \
	unescape-6.swf.trace \
	unescape-6.swf.trace.org \
	unescape-7.swf \
	unescape-7.swf.trace \
	unescape-7.swf.trace.org \
	unescape2.as \
	unescape2-5.swf \
	unescape2-5.swf.trace \
	unescape2-6.swf \
	unescape2-6.swf.trace \
	unescape2-7.swf \
	unescape2-7.swf.trace \
	values.as \
	video.flv \
	with-delete.as \
	with-delete-5.swf \
	with-delete-5.swf.trace \
	with-delete-6.swf \
	with-delete-6.swf.trace \
	with-delete-7.swf \
	with-delete-7.swf.trace \
	with-function-delete.as \
	with-function-delete-5.swf \
	with-function-delete-5.swf.trace \
	with-function-delete-6.swf \
	with-function-delete-6.swf.trace \
	with-function-delete-7.swf \
	with-function-delete-7.swf.trace \
	with-prototypes.as \
	with-prototypes-5.swf \
	with-prototypes-5.swf.trace \
	with-prototypes-6.swf \
	with-prototypes-6.swf.trace \
	with-prototypes-7.swf \
	with-prototypes-7.swf.trace \
	xscale.swf \
	xscale.swf.trace

CLEANFILES = tmp
